--- a/src/app/material/form-example/form-example.component.html
+++ b/src/app/material/form-example/form-example.component.html
@@ -1,5 +1,3 @@
-<mat-form-field>
-  <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
+<input [matDatepicker]="myDatepicker" [disabled]="true">
+<mat-datepicker-toggle [for]="myDatepicker"></mat-datepicker-toggle>
+<mat-datepicker #myDatepicker></mat-datepicker>
