--- a/src/app/material/form-example/form-example.component.html
+++ b/src/app/material/form-example/form-example.component.html
@@ -1,3 +1,3 @@
-<input [matDatepicker]="myDatepicker" [disabled]="true">
+<input [matDatepicker]="myDatepicker">
 <mat-datepicker-toggle [for]="myDatepicker"></mat-datepicker-toggle>
 <mat-datepicker #myDatepicker></mat-datepicker>
